# FabricBinarySearch

./: .gitignore  CMakeLists.txt
.github/workflows/: release.yml
include/core/: BinarySearchEngine.h  ModManager.h
include/gui/: GuiApp.h
include/utils/: Config.h  CrashLogParser.h  JarReader.h  Logger.h  MinecraftLauncher.h  ModInfo.h  ProgressState.h
src/: main.cpp
src/core/: BinarySearchEngine.cpp  ModManager.cpp
src/gui/: GuiApp.cpp
src/utils/: Config.cpp  CrashLogParser.cpp  JarReader.cpp  Logger.cpp  MinecraftLauncher.cpp  ModInfo.cpp  ProgressState.cpp
